results for pole vs MSbar vs MSR

--- a/papercharmrun.bib
+++ b/papercharmrun.bib
@@ -599,3 +599,159 @@ SLACcitation   = "%%CITATION = ARXIV:1605.01946;%%"
       reportNumber   = "MPP-2015-257",
       SLACcitation   = "%%CITATION = ARXIV:1509.01061;%%"
 }
+@article{Schmidt:2012az,
+      author         = "Schmidt, Barbara and Steinhauser, Matthias",
+      title          = "{CRunDec: a C++ package for running and decoupling of the
+                        strong coupling and quark masses}",
+      journal        = "Comput. Phys. Commun.",
+      volume         = "183",
+      year           = "2012",
+      pages          = "1845-1848",
+      doi            = "10.1016/j.cpc.2012.03.023",
+      eprint         = "1201.6149",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "SFB-CPP-12-03, TTP12-02",
+      SLACcitation   = "%%CITATION = ARXIV:1201.6149;%%"
+}
+@article{Gray:1990yh,
+      author         = "Gray, N. and Broadhurst, David J. and Grafe, W. and
+                        Schilcher, K.",
+      title          = "{Three Loop Relation of Quark (Modified) Ms and Pole
+                        Masses}",
+      journal        = "Z. Phys.",
+      volume         = "C48",
+      year           = "1990",
+      pages          = "673-680",
+      doi            = "10.1007/BF01614703",
+      reportNumber   = "OUT-4102-28",
+      SLACcitation   = "%%CITATION = ZEPYA,C48,673;%%"
+}
+@article{Chetyrkin:1999qi,
+      author         = "Chetyrkin, K. G. and Steinhauser, M.",
+      title          = "{The Relation between the MS-bar and the on-shell quark
+                        mass at order alpha(s)**3}",
+      journal        = "Nucl. Phys.",
+      volume         = "B573",
+      year           = "2000",
+      pages          = "617-651",
+      doi            = "10.1016/S0550-3213(99)00784-1",
+      eprint         = "hep-ph/9911434",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "DESY-99-174, TTP-99-47",
+      SLACcitation   = "%%CITATION = HEP-PH/9911434;%%"
+}
+@article{Melnikov:2000qh,
+      author         = "Melnikov, Kirill and Ritbergen, Timo van",
+      title          = "{The Three loop relation between the MS-bar and the pole
+                        quark masses}",
+      journal        = "Phys. Lett.",
+      volume         = "B482",
+      year           = "2000",
+      pages          = "99-108",
+      doi            = "10.1016/S0370-2693(00)00507-4",
+      eprint         = "hep-ph/9912391",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "SLAC-PUB-8321, TTP-99-51",
+      SLACcitation   = "%%CITATION = HEP-PH/9912391;%%"
+}
+@article{Hoang:2008yj,
+      author         = "Hoang, Andre H. and Jain, Ambar and Scimemi, Ignazio and
+                        Stewart, Iain W.",
+      title          = "{Infrared Renormalization Group Flow for Heavy Quark
+                        Masses}",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "101",
+      year           = "2008",
+      pages          = "151602",
+      doi            = "10.1103/PhysRevLett.101.151602",
+      eprint         = "0803.4214",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "MIT-CTP-3940, MPP-2008-24",
+      SLACcitation   = "%%CITATION = ARXIV:0803.4214;%%"
+}
+@article{Moch:2014tta,
+      author         = "Moch, S. and others",
+      title          = "{High precision fundamental constants at the TeV scale}",
+      year           = "2014",
+      eprint         = "1405.4781",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "DESY-14-081, MITP-14-036",
+      SLACcitation   = "%%CITATION = ARXIV:1405.4781;%%"
+}
+@article{Aad:2019mkw,
+      author         = "Aad, Georges and others",
+      title          = "{Measurement of the top-quark mass in $t\bar{t}+1$-jet
+                        events collected with the ATLAS detector in $pp$
+                        collisions at $\sqrt{s}=8$ TeV}",
+      collaboration  = "ATLAS",
+      year           = "2019",
+      eprint         = "1905.02302",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-EP-2019-059",
+      SLACcitation   = "%%CITATION = ARXIV:1905.02302;%%"
+}
+@article{Mangano:1991jk,
+      author         = "Mangano, Michelangelo L. and Nason, Paolo and Ridolfi,
+                        Giovanni",
+      title          = "{Heavy quark correlations in hadron collisions at
+                        next-to-leading order}",
+      journal        = "Nucl. Phys.",
+      volume         = "B373",
+      year           = "1992",
+      pages          = "295-345",
+      doi            = "10.1016/0550-3213(92)90435-E",
+      reportNumber   = "IFUP-TH-32-91, UPRF-91-308, GEF-TH-10-1991A",
+      SLACcitation   = "%%CITATION = NUPHA,B373,295;%%"
+}
+@article{Dowling:2013baa,
+      author         = "Dowling, Matthew and Moch, Sven-Olaf",
+      title          = "{Differential distributions for top-quark
+                        hadro-production with a running mass}",
+      journal        = "Eur. Phys. J.",
+      volume         = "C74",
+      year           = "2014",
+      number         = "11",
+      pages          = "3167",
+      doi            = "10.1140/epjc/s10052-014-3167-x",
+      eprint         = "1305.6422",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "DESY-13-092, LPN-13-032, SFB-CPP-13-36",
+      SLACcitation   = "%%CITATION = ARXIV:1305.6422;%%"
+}
+@article{Campbell:1999ah,
+      author         = "Campbell, John M. and Ellis, R. Keith",
+      title          = "{An Update on vector boson pair production at hadron
+                        colliders}",
+      journal        = "Phys. Rev.",
+      volume         = "D60",
+      year           = "1999",
+      pages          = "113006",
+      doi            = "10.1103/PhysRevD.60.113006",
+      eprint         = "hep-ph/9905386",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "FERMILAB-PUB-99-146-T",
+      SLACcitation   = "%%CITATION = HEP-PH/9905386;%%"
+}
+@article{Campbell:2011bn,
+      author         = "Campbell, John M. and Ellis, R. Keith and Williams,
+                        Ciaran",
+      title          = "{Vector boson pair production at the LHC}",
+      journal        = "JHEP",
+      volume         = "07",
+      year           = "2011",
+      pages          = "018",
+      doi            = "10.1007/JHEP07(2011)018",
+      eprint         = "1105.0020",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "FERMILAB-PUB-11-182-T",
+      SLACcitation   = "%%CITATION = ARXIV:1105.0020;%%"
+}
